Update GPS data transmission interval configuration in multiple translations

--- a/translations/de.json
+++ b/translations/de.json
@@ -94,7 +94,7 @@
     "etransportUitStopGPSData": "",
     "etransportUitGPSDataStarted": "",
     "etransportUitSaveAndClose": "",
-    "etransportUitStartDialogTitle": "",
+    "etransportUitStartDialogTitle": "Konfigurieren Sie das GPS-Datenübertragungsintervall für das Fahrzeug",
     "etransportUitChangeVehiculeDialogTitle": "",
     "etransportUitStartIntervalIsPast": "",
     "etransportUitStartChooseVehicle": "",
@@ -364,6 +364,8 @@
     "scheduleStatusOngoing": "Ongoing",
     "createUitDeviceDeclaration": "Create declaration",
     "etransportUitDeviceDeclarationDateFrom": "Declaration date from",
+    "etransportUitViewScheduleIntervalTransmittingGPS": "GPS-Datenübertragungsintervall",
+    "etransportUitScheduleViewInfo": "Im ausgewählten Zeitraum wird der Standort des Fahrzeugs automatisch per GPS übertragen",
     "createuitCode": "Create declaration ANAF",
     "etransportuitCodeDateFrom": "Uit date from",
     "active": "Active",
