--- a/translations/en.json
+++ b/translations/en.json
@@ -93,7 +93,7 @@
     "etransportUitStartGPSData": "Start GPS Data Transmission",
     "etransportUitStopGPSData": "Stop GPS Data Transmission",
     "etransportUitSaveAndClose": "Save And Close",
-    "etransportUitStartDialogTitle": "Plan to transmit GPS data",
+    "etransportUitStartDialogTitle": "Configure the GPS data transmission interval for the vehicle",
     "etransportUitChangeVehiculeDialogTitle": "Change Vehicle",
     "etransportUitStartIntervalIsPast": "The selected interval is in the past!",
     "etransportUitStartChooseVehicle": "Please choose vehicle!",
@@ -361,6 +361,8 @@
     "scheduleStatusCompleted": "Completed",
     "scheduleStatusCanceled": "Canceled",
     "scheduleStatusOngoing": "Ongoing",
+    "etransportUitViewScheduleIntervalTransmittingGPS": "GPS Data Transmission Interval",
+    "etransportUitScheduleViewInfo": "During the selected period, the vehicle's location will be automatically transmitted via GPS",
     "createUitDeviceDeclaration": "Create declaration",
     "etransportUitDeviceDeclarationDateFrom": "Declaration date from",
     "createuitCode": "Create declaration ANAF",
