--- a/translations/hu.json
+++ b/translations/hu.json
@@ -94,7 +94,7 @@
     "etransportUitStopGPSData": "GPS adatátvitel leállítása",
     "etransportUitGPSDataStarted": "A GPS adatátvitel elindul",
     "etransportUitSaveAndClose": "Mentés és bezárás",
-    "etransportUitStartDialogTitle": "Tervezze meg GPS adatok továbbítását",
+    "etransportUitStartDialogTitle": "Állítsa be a GPS adatátviteli intervallumot a járműhöz",
     "etransportUitChangeVehiculeDialogTitle": "Járműcsere",
     "etransportUitStartIntervalIsPast": "A kiválasztott intervallum a múltban van!",
     "etransportUitStartChooseVehicle": "Kérjük, válasszon járművet!",
@@ -364,6 +364,8 @@
     "scheduleStatusOngoing": "Ongoing",
     "createUitDeviceDeclaration": "Create declaration",
     "etransportUitDeviceDeclarationDateFrom": "Declaration date from",
+    "etransportUitScheduleViewInfo": "A kiválasztott időszakban a jármű helye automatikusan továbbításra kerül GPS-en keresztül",
+    "etransportUitViewScheduleIntervalTransmittingGPS": "GPS adatátviteli intervallum",
     "createuitCode": "Create declaration ANAF",
     "etransportuitCodeDateFrom": "Uit date from",
     "active": "Active",
