--- a/translations/ro.json
+++ b/translations/ro.json
@@ -94,7 +94,7 @@
     "etransportUitStopGPSData": "Stop transmitere date GPS",
     "etransportUitGPSDataStarted": "Transmiterea datelor GPS este pornită",
     "etransportUitSaveAndClose": "Salvează și Închide",
-    "etransportUitStartDialogTitle": "Planifică transmiterea datelor GPS",
+    "etransportUitStartDialogTitle": "Configurează intervalul de transmitere a datelor GPS pentru vehicul",
     "etransportUitChangeVehiculeDialogTitle": "Schimbare vehicul",
     "etransportUitStartIntervalIsPast": "Intervalul selectat este în trecut!",
     "etransportUitStartChooseVehicle": "Alegeți vehiculul!",
@@ -103,6 +103,8 @@
     "etransportClose": "Închide",
     "etransportConfirm": "Confirmă",
     "etransportUitViewScheduleList": "Planificări transmitere date GPS",
+    "etransportUitViewScheduleIntervalTransmittingGPS": "Interval transmitere date GPS",
+    "etransportUitScheduleViewInfo": "În perioada selectată, locația vehiculului va fi transmisă automat prin GPS",
     "etransportUitScheduleVehicle": "Replanifică Vehicul",
     "etransportUitEditScheduleVehicle": "Editează planificare",
     "etransportUITCodeDeleteVehicle": "Ștergere vehicul",
