--- a/translations/ru.json
+++ b/translations/ru.json
@@ -94,7 +94,8 @@
     "etransportUitStopGPSData": "Прекратить передачу данных GPS",
     "etransportUitGPSDataStarted": "Передача GPS-данных включена",
     "etransportUitSaveAndClose": "Сохранить и закрыть",
-    "etransportUitStartDialogTitle": "Запланировать передачу данных GPS",
+    "etransportUitStartDialogTitle": "Настроить интервал передачи данных GPS для транспортного средства",
+    "etransportUitScheduleViewInfo": "В выбранный период местоположение транспортного средства будет автоматически передаваться через GPS",
     "etransportUitChangeVehiculeDialogTitle": "Изменить транспортное средство",
     "etransportUitStartIntervalIsPast": "Выбранный интервал находится в прошлом!",
     "etransportUitStartChooseVehicle": "Выберите транспортное средство",
@@ -363,6 +364,7 @@
     "scheduleStatusCanceled": "Отменено",
     "scheduleStatusOngoing": "В процессе",
     "createUitDeviceDeclaration": "Создание декларации",
+    "etransportUitViewScheduleIntervalTransmittingGPS": "Интервал передачи данных GPS",
     "etransportUitDeviceDeclarationDateFrom": "Дата от",
     "createuitCode": "Создание декларации ANAF",
     "etransportuitCodeDateFrom": "Дата от",
