--- a/translations/ro.json
+++ b/translations/ro.json
@@ -77,7 +77,7 @@
     "etransportSchedulePlanned": "Planificată",
     "etransportScheduleCanceled": "Anulată",
     "etransportScheduleCancel": "Anulează Planificare",
-    "etransportStopTransmission": "Oprește Transmisia Acum",
+    "etransportStopTransmission": "Oprește Transmisia",
     "etransportScheduleSaved": "Planificarea a fost salvată cu succes!",
     "etransportScheduleTransmissionStoped": "Transmisia a fost oprită cu succes!",
     "etransportScheduleTransmissionCanceled": "Transmisia a fost anulată cu succes!",
