--- a/translations/ru.json
+++ b/translations/ru.json
@@ -398,5 +398,7 @@
     "modalWillClosedAuto": "Окно закроется автоматически",
     "confirmActionMessageDeleteUit": "Вы уверены, что хотите удалить UIT?",
     "vehicleDeviceNoDataTransmission": "Устройство транспортного средства не имеет обновленной передачи данных на сервер CargoTrack. Поэтому местоположение транспортного средства может быть недоступно в данный момент для начала передачи данных.",
-    "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных."
+    "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных.",
+    "permisionCamera": "Разрешение на использование камеры не включено",
+    "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона."
 }
