--- a/translations/ru.json
+++ b/translations/ru.json
@@ -385,6 +385,7 @@
     "confirmCancelMessage": "Вы уверены, что хотите отменить?",
     "confirmAction": "Подтвердить действие",
     "confirmActionMessageMakeUITDelivered": "Вы уверены, что хотите отправить UIT в статусе «Доставлен»?",
+    "confirmActionMessageMakeUITActiv": "Вы уверены, что хотите активировать UIT?",
     "delivered": "Доставлен",
     "etransportUitMarkDelivered": "Отметить как доставленный",
     "etransportUitDelivered": "UIT доставлен",
@@ -400,5 +401,6 @@
     "vehicleDeviceNoDataTransmission": "Устройство транспортного средства не имеет обновленной передачи данных на сервер CargoTrack. Поэтому местоположение транспортного средства может быть недоступно в данный момент для начала передачи данных.",
     "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных.",
     "permisionCamera": "Разрешение на использование камеры не включено",
-    "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона."
+    "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона.",
+    "activate": "Активировать"
 }
