--- a/translations/hu.json
+++ b/translations/hu.json
@@ -385,6 +385,7 @@
     "confirmCancelMessage": "Biztosan törölni szeretné?",
     "confirmAction": "Megerősítés",
     "confirmActionMessageMakeUITDelivered": "Biztosan törölni szeretné?",
+    "confirmActionMessageMakeUITActiv": "Biztosan aktiválni szeretné?",
     "delivered": "Törölve",
     "etransportUitMarkDelivered": "Törölve",
     "etransportUitDelivered": "Törölve",
@@ -400,5 +401,6 @@
     "vehicleDeviceNoDataTransmission" :"A jármű eszköze nem rendelkezik frissített adatátvitellel a CargoTrack szerver felé. Ezért előfordulhat, hogy a jármű pozíciója jelenleg nem érhető el az adatátvitel elindításához.",
     "acknowledgeRiskNoDataUpdate": "Tudomásul vettem a mentés kockázatát frissített adatátvitel nélkül.",
     "enableCameraPermission": "Engedélyezés",
-    "enableCameraPermissionMessage": "A képernyőfelvétel engedélyezéséhez engedélyezze a kamera engedélyezését a telefon beállításaiban."
+    "enableCameraPermissionMessage": "A képernyőfelvétel engedélyezéséhez engedélyezze a kamera engedélyezését a telefon beállításaiban.",
+    "activate": "Aktiválás"
 }
