--- a/translations/ru.json
+++ b/translations/ru.json
@@ -402,5 +402,5 @@
     "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных.",
     "permisionCamera": "Разрешение на использование камеры не включено",
     "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона.",
-    "activate": "Активировать"
+    "undelivered": "Не доставлен"
 }
