--- a/translations/ru.json
+++ b/translations/ru.json
@@ -402,5 +402,6 @@
     "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных.",
     "permisionCamera": "Разрешение на использование камеры не включено",
     "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона.",
-    "undelivered": "Не доставлен"
+    "undelivered": "Не доставлен",
+    "uitVehicleNoContractError": "Транспортное средство, назначенное коду UIT, не связано с контрактом e-Transport, поэтому передача данных транспортных средств не будет осуществляться."
 }
