--- a/translations/ru.json
+++ b/translations/ru.json
@@ -404,5 +404,6 @@
     "permisionCamera": "Разрешение на использование камеры не включено",
     "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона.",
     "undelivered": "Не доставлен",
-    "uitVehicleNoContractError": "Транспортное средство, назначенное коду UIT, не связано с контрактом e-Transport, поэтому передача данных транспортных средств не будет осуществляться."
+    "uitVehicleNoContractError": "Транспортное средство, назначенное коду UIT, не связано с контрактом e-Transport, поэтому передача данных транспортных средств не будет осуществляться.",
+    "cameraPermissionDeniedMessage": "Вы не предоставили разрешение на использование камеры. Разрешите доступ в настройках телефона."
 }
