--- a/translations/de.json
+++ b/translations/de.json
@@ -404,5 +404,6 @@
     "undelivered": "Nicht geliefert",
     "uitVehicleNoContractError": "Das dem UIT-Code zugewiesene Fahrzeug ist keinem e-Transport-Vertrag zugeordnet, daher werden keine Fahrzeugdaten übertragen.",
     "etransportUitDelivered": "UIT als geliefert markieren",
-    "etransportUitUndelivered": "UIT als nicht geliefert markieren"
+    "etransportUitUndelivered": "UIT als nicht geliefert markieren",
+    "cameraPermissionDeniedMessage": "Sie haben keine Berechtigung zur Nutzung der Kamera erteilt. Bitte erlauben Sie den Kamerazugriff in den Telefoneinstellungen."
 }
