--- a/translations/ro.json
+++ b/translations/ro.json
@@ -404,6 +404,6 @@
     "permisionCamera": "Permisiunea pentru camera nu este activată",
     "enableCameraPermissionMessage": "Pentru a putea utiliza funcția de fotografiere, vă rugăm să activați permisiunea pentru camera din setările telefonului.",
     "undelivered": "Nelivrat",
-    "uitVehicleNoContractError": "Vehiculul alocat codului UIT nu este asociat unui contract e-Transport, motiv pentru care nu se vor efectua transmisii de date ale vehiculelor."
-
+    "uitVehicleNoContractError": "Vehiculul alocat codului UIT nu este asociat unui contract e-Transport, motiv pentru care nu se vor efectua transmisii de date ale vehiculelor.",
+    "cameraPermissionDeniedMessage": "Nu ați acordat permisiunile pentru utilizarea camerei. Acordați permisiunile din setările telefonului."
 }
