--- a/translations/ru.json
+++ b/translations/ru.json
@@ -405,5 +405,6 @@
     "enableCameraPermissionMessage": "Для использования функции фотосъемки включите разрешение на использование камеры в настройках телефона.",
     "undelivered": "Не доставлен",
     "uitVehicleNoContractError": "Транспортное средство, назначенное коду UIT, не связано с контрактом e-Transport, поэтому передача данных транспортных средств не будет осуществляться.",
-    "cameraPermissionDeniedMessage": "Вы не предоставили разрешение на использование камеры. Разрешите доступ в настройках телефона."
+    "cameraPermissionDeniedMessage": "Вы не предоставили разрешение на использование камеры. Разрешите доступ в настройках телефона.",
+    "uitNotificationError3": "Транспортное средство не привязано к контракту eTransport партнёра {{name}}! Пожалуйста, свяжитесь со службой поддержки!"
 }
