--- a/translations/en.json
+++ b/translations/en.json
@@ -404,5 +404,6 @@
     "enableCameraPermissionMessage": "To use the camera function, please enable the camera permission in the phone's settings.",
     "undelivered": "Undelivered",
     "uitVehicleNoContractError": "The vehicle assigned to the UIT code is not associated with an e-Transport contract, therefore no vehicle data transmissions will be made.",
-    "cameraPermissionDeniedMessage": "You have not granted permission to use the camera. Please allow camera access in your phone settings."
+    "cameraPermissionDeniedMessage": "You have not granted permission to use the camera. Please allow camera access in your phone settings.",
+    "uitNotificationError3": "The vehicle is not assigned to the eTransport contract of partner {{name}}! Please contact the support team!"
 }
