--- a/translations/ru.json
+++ b/translations/ru.json
@@ -406,5 +406,9 @@
     "undelivered": "Не доставлен",
     "uitVehicleNoContractError": "Транспортное средство, назначенное коду UIT, не связано с контрактом e-Transport, поэтому передача данных транспортных средств не будет осуществляться.",
     "cameraPermissionDeniedMessage": "Вы не предоставили разрешение на использование камеры. Разрешите доступ в настройках телефона.",
-    "uitNotificationError3": "Транспортное средство не привязано к контракту eTransport партнёра {{name}}! Пожалуйста, свяжитесь со службой поддержки!"
+    "uitNotificationError1": "Транспортное средство, назначенное в UIT, не отслеживается в системе CargoTrack!",
+    "uitNotificationError2": "Транспортное средство, назначенное в UIT, не связано с вашей учетной записью! Пожалуйста, свяжитесь со службой поддержки!",
+    "uitNotificationError3": "Транспортное средство не привязано к контракту eTransport партнёра {{name}}! Пожалуйста, свяжитесь со службой поддержки!",
+    "uitNotificationError4": "С вашей учетной записью не связан ни один контракт eTransport! Пожалуйста, свяжитесь со службой поддержки!",
+    "uitNotificationError5": "Транспортное средство, назначенное в UIT, не указано в вашем контракте eTransport! Пожалуйста, свяжитесь со службой поддержки!"
 }
