--- a/translations/ru.json
+++ b/translations/ru.json
@@ -412,5 +412,6 @@
     "uitNotificationError4": "С вашей учетной записью не связан ни один контракт eTransport! Пожалуйста, свяжитесь со службой поддержки!",
     "uitNotificationError5": "Транспортное средство, назначенное в UIT, не указано в вашем контракте eTransport! Пожалуйста, свяжитесь со службой поддержки!",
     "cargoboxBalanceInfo": "Доступный баланс подтверждается ежедневно на основе обработки транзакций предыдущего дня.\nЧтобы предотвратить отрицательный баланс, система CargoTrack оценивает стоимость оплаченных дорожных сборов до настоящего момента.\nЕсли ваш баланс недостаточен для покрытия дорожных сборов, они останутся неоплаченными до тех пор, пока счет не будет пополнен, но не позднее чем через 48 часов после того, как баланс станет отрицательным. \nДля дорожного домена Франции подтверждения дорожных сборов обрабатываются раз в две недели. \nВсе платежные данные можно найти в разделе «Транзакции»!",
-    "cargoboxBalanceUnpaid": "неоплаченные сборы CargoBox"
+    "cargoboxBalanceUnpaid": "неоплаченные сборы CargoBox",
+    "cargoboxBalanceUnpaidInfo": "Баланс вашего счета недостаточен, и связанные с этим дорожные сборы не были оплачены.\nОплата оператору дорожных сборов будет возможна только после пополнения счета.\nПожалуйста, обратите внимание, что в течение этого периода любые штрафы, полученные в связи \nс неоплаченными дорожными сборами, не являются нашей ответственностью!"
 }
