--- a/translations/en.json
+++ b/translations/en.json
@@ -412,5 +412,15 @@
     "uitNotificationError5": "The vehicle assigned to UIT is not on your eTransport contract! Please contact the support team!",
     "cargoboxBalanceInfo": "The available balance is confirmed daily, based on the processing of transactions from the previous day. To prevent a negative balance, the CargoTrack system estimates the value of tolls paid up to the present moment.\nIf your balance is insufficient to cover the tolls, these will remain unpaid until the account is topped up — but no later than 48 hours after the balance becomes negative.\nFor the France toll domain, toll confirmations are processed bi-weekly. All payment-related details can be found in the “Transactions” section!",
     "cargoboxBalanceUnpaid": "unpaid cargobox fees",
-    "cargoboxBalanceUnpaidInfo": "Your account balance is insufficient, and the related tolls have not been paid.\nPayment to the toll operator will only be possible after the account is topped up.\nPlease note that during this period, any fines incurred due to unpaid tolls are not our responsibility!"
+    "cargoboxBalanceUnpaidInfo": "Your account balance is insufficient, and the related tolls have not been paid.\nPayment to the toll operator will only be possible after the account is topped up.\nPlease note that during this period, any fines incurred due to unpaid tolls are not our responsibility!",
+    "tollDomainStatus10": "Cerere de activare",
+    "tollDomainStatus1": "Activ",
+    "tollDomainStatus4": "Cerere de suspendare",
+    "tollDomainStatus31": "Suspendat",
+    "tollDomainStatus29": "Inactiv",
+    "tollDomainStatus30": "Inactiv",
+    "tollDomainStatus7": "Cerere de reziliere",
+    "tollDomainStatus9": "Inactiv",
+    "tollDomainStatus99": "Inactiv",
+    "tollDomainStatus-1": "Inactiv"
 }
